Fix the icons being way too big without JS

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -96,3 +96,17 @@ a > code {
     white-space: nowrap !important;
     border: 0 !important;
 }
+
+/*
+  TODO: Remove this CSS class.
+
+  It should be imported by the `@fortawesome/fontawesome-svg-core/styles.css` stylesheet in gatsby-browser.js, but
+  since upgrading from Gatsby v2 to v3, the stylesheet is loaded only through JavaScript and users without JS will
+  see the icons way bigger than they should be.
+*/
+.svg-inline--fa {
+    display: var(--fa-display, inline-block);
+    height: 1em;
+    overflow: visible;
+    vertical-align: -.125em;
+}
